# uv_test_package

./: LICENSE  README.md  pyproject.toml
src/uv_test_package/: math.py
